--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,15 @@
 *.meta
 Temp/
 Library/
+Obj/
+Build
+sysinfo.txt
+[Ee]xported[Oo]bj/
+/*.userprefs
+/*.csproj
+/*.pidb
+/*.suo
+/*.sln*
+/*.user
+/*.unityproj
+/*.booproj
