--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ sysinfo.txt
 /*.csproj
 /*.pidb
 /*.suo
-*.sln*
+/*.sln*
 /*.user
 /*.unityproj
 /*.booproj
@@ -39,6 +39,7 @@ Temp
 .user
 .pidb
 .userprefs
+.sln
 
 $PROJDIR/Library
 
