--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,9 @@
 [Bb]uild
 [Ll]ibrary/
 sysinfo.txt
- 
+
+Library/shadercompiler-32bit-1.log
+
 # ===================================== #
 # Visual Studio / MonoDevelop generated #
 # ===================================== #
